[project]
name = "vibrant-oauth2-client"
version = "1.1.0"
description = "Vibrant OAuth2 Client Library for Python"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Wang Tianhao"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["vibrant", "oauth2", "client", "authentication"]
dependencies = [
    "requests>=2.32.5",
    "urllib3>=2.6.3",
]

[project.urls]
Homepage = "https://github.com/Wang-tianhao/Vibrant-Oauth2-client-python"
Repository = "https://github.com/Wang-tianhao/Vibrant-Oauth2-client-python"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vibrant_client"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
]
